Moves all GLX code down from Clutter to Cogl
This migrates all the GLX window system code down from the Clutter
backend code into a Cogl winsys. Moving OpenGL window system binding
code down from Clutter into Cogl is the biggest blocker to having Cogl
become a standalone 3D graphics library, so this is an important step in
that direction.

--- a/configure.ac
+++ b/configure.ac
@@ -447,6 +447,8 @@ AS_IF([test "x$SUPPORT_GLX" = "x1"],
       [
         AC_DEFINE([COGL_HAS_GLX_SUPPORT], [1], [Cogl supports OpenGL using the GLX API])
 
+        AC_DEFINE([COGL_HAS_FULL_WINSYS], [1], [Cogl can create its own OpenGL context])
+
         AC_DEFINE([HAVE_CLUTTER_GLX], [1], [Have the GLX backend])
 
         AC_CHECK_HEADERS([GL/glx.h],
