correct lib locations in *.pc.in
Signed-off-by: Andreas Mueller <schnitzeltony@gmx.de>
Signed-off-by: Emmanuele Bassi <ebassi@linux.intel.com>

http://bugzilla.clutter-project.org/show_bug.cgi?id=2549

--- a/clutter/cally/cally.pc.in
+++ b/clutter/cally/cally.pc.in
@@ -13,6 +13,6 @@ Name: Cally
 Description: Clutter Accessibility Implementation Library
 Version: @VERSION@
 Requires: atk clutter-1.0
-Libs: -L${libdir} -lclutter-${winsys}-${apiversion}
+Libs: -L${libdir} -lclutter-${soname_infix}-${apiversion}
 Cflags: -I${includedir}/clutter-${apiversion}
 Requires: ${requires}
