--- a/clutter/cogl/cogl/cogl.pc.in
+++ b/clutter/cogl/cogl/cogl.pc.in
@@ -8,10 +8,11 @@ backend=@COGL_WINSYS@ #only kept for backward compatability
 winsys=@COGL_WINSYS@
 cogl=@COGL_DRIVER@ #only kept for backward compatability
 driver=@COGL_DRIVER@
+soname_infix=@CLUTTER_SONAME_INFIX@
 
 Name: COGL
 Description: Clutter GL abstraction library (${winsys}/${driver} backend)
 Version: @VERSION@
-Libs: -L${libdir} -lclutter-${winsys}-${apiversion}
+Libs: -L${libdir} -lclutter-${soname_infix}-${apiversion}
 Cflags: -I${includedir}/clutter-${apiversion}
 Requires: ${requires}
