--- a/clutter/cogl/cogl/cogl-1.0.pc.in
+++ b/clutter/cogl/cogl/cogl-1.0.pc.in
@@ -2,12 +2,12 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
-apiversion=@COGL_API_VERSION@
+apiversion=1.0
 requires=@COGL_PKG_REQUIRES@
 
 Name: Cogl
 Description: An object oriented GL/GLES Abstraction/Utility Layer
-Version: @COGL_VERSION@
-Libs: -L${libdir} -lcogl
-Cflags: -I${includedir}/cogl -DCOGL_ENABLE_EXPERIMENTAL_2_0_API
+Version: @COGL_1_VERSION@
+Libs: -L${libdir} -lcogl -lcoglpango
+Cflags: -I${includedir}/cogl
 Requires: ${requires}
