Add temporary cogl-clutter.h to aid splitting out Cogl
This gives us a way to clearly track the internal Cogl API that Clutter
depends on. The aim is to split Cogl out from Clutter into a standalone
3D graphics API and eventually we want to get rid of any private
interfaces for Clutter so its useful to have a handle on that task.
Actually it's not as bad as I was expecting though.

--- a/clutter/cogl/cogl/Makefile.am
+++ b/clutter/cogl/cogl/Makefile.am
@@ -78,6 +78,7 @@ cogl_public_h = \
 	$(srcdir)/cogl-attribute.h 		\
 	$(srcdir)/cogl-primitive.h 		\
 	$(srcdir)/cogl-clip-state.h		\
+	$(srcdir)/cogl-clutter.h       		\
 	$(srcdir)/cogl.h			\
 	$(NULL)
 
@@ -271,8 +272,9 @@ cogl_sources_c = \
 	$(srcdir)/cogl-shader-private.h			\
 	$(srcdir)/cogl-shader.c                        	\
 	$(srcdir)/cogl-gtype-private.h                  \
-	$(srcdir)/cogl-point-in-poly-private.h       \
-	$(srcdir)/cogl-point-in-poly.c       	\
+	$(srcdir)/cogl-point-in-poly-private.h       	\
+	$(srcdir)/cogl-point-in-poly.c       		\
+	$(srcdir)/cogl-clutter.c       			\
 	$(NULL)
 
 if SUPPORT_XLIB
