rename winsys files to be more consistent
This tries to make the naming style of files under cogl/winsys/
consistent with other cogl source files. In particular private header
files didn't have a '-private' infix.

--- a/clutter/cogl/cogl/Makefile.am
+++ b/clutter/cogl/cogl/Makefile.am
@@ -110,7 +110,7 @@ endif # COGL_DRIVER_GLES
 
 # winsys sources, common to all backends
 cogl_winsys_common_sources = \
-	$(srcdir)/winsys/cogl-winsys.h				\
+	$(srcdir)/winsys/cogl-winsys-private.h			\
 	$(srcdir)/winsys/cogl-context-winsys.h          	\
 	$(srcdir)/winsys/cogl-context-winsys.c          	\
 	$(srcdir)/winsys/cogl-winsys-feature-functions.h	\
@@ -282,42 +282,42 @@ cogl_experimental_h += \
        $(srcdir)/winsys/cogl-texture-pixmap-x11.h
 
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-xlib.h \
-       $(srcdir)/winsys/cogl-xlib.c \
+       $(srcdir)/winsys/cogl-winsys-xlib.h \
+       $(srcdir)/winsys/cogl-winsys-xlib.c \
        $(srcdir)/winsys/cogl-texture-pixmap-x11.c \
        $(srcdir)/winsys/cogl-texture-pixmap-x11-private.h
 endif
 if SUPPORT_GLX
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-glx.c
+       $(srcdir)/winsys/cogl-winsys-glx.c
 endif
 if SUPPORT_EGL_PLATFORM_POWERVR_X11
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-egl.c
+       $(srcdir)/winsys/cogl-winsys-egl.c
 endif
 if SUPPORT_EGL_PLATFORM_POWERVR_NULL
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-egl.c
+       $(srcdir)/winsys/cogl-winsys-egl.c
 endif
 if SUPPORT_EGL_PLATFORM_POWERVR_GDL
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-egl.c
+       $(srcdir)/winsys/cogl-winsys-egl.c
 endif
 if SUPPORT_EGL_PLATFORM_FRUITY
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-fruity.c
+       $(srcdir)/winsys/cogl-winsys-fruity.c
 endif
 if SUPPORT_EGL_PLATFORM_DRM_SURFACELESS
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-egl.c
+       $(srcdir)/winsys/cogl-winsys-egl.c
 endif
 if SUPPORT_WIN32
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-win32.c
+       $(srcdir)/winsys/cogl-winsys-win32.c
 endif
 if SUPPORT_OSX
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-osx.c
+       $(srcdir)/winsys/cogl-winsys-osx.c
 endif
 
 EXTRA_DIST += stb_image.c
